HashMap源码put（链存储）.md

--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,19 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+#theme: landscape
+theme: keep
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/zhangbao01/zhangbao.github.io.git
+  #repo: https://github.com/zhangbao01/zhangbao.github.io.git
+  repo: git@github.com:zhangbao01/zhangbao01.github.io.git
   branch: main
+
+search:
+  path: search.json
+  field: post
+  content: true
+  format: striptags
